--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,15 @@
 @use'hero';
 @use 'components/infos_bar';
-@use 'components/buttons';
+@use'components/buttons';
 @use 'event';
+@use 'variaveis';
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: roboto, sans-serif;
-    color:#fff;
+    color: variaveis.$text_color;
     list-style: none;
 }
 .container{
